--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 .App {
-  background-color: rgb(15, 24, 43);
+  background-color: #050912;
 }
 
 .nav{
-  background-color: rgb(50, 137, 130);
+  background-color: #1b1b1b;
 }
 
