--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,17 @@
   background-color: #1b1b1b;
 }
 
+.spinner {
+  width: 40px;
+  height: 40px;
+  border: 4px solid rgba(174, 231, 255, 0.491);
+  border-top-color: #09f;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
